--- a/app/package.json
+++ b/app/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@react-three/drei": "10.7.4",
     "@react-three/fiber": "9.3.0",
+    "@tabler/icons-react": "3.34.1",
     "@types/three": "0.179.0",
+    "clsx": "2.1.1",
+    "motion": "12.23.12",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "tailwind-merge": "3.3.1",
     "three": "0.179.1",
     "three-stdlib": "2.36.0"
   },
