--- a/app/package.json
+++ b/app/package.json
@@ -6,17 +6,22 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "build:content": "contentlayer2 build"
   },
   "dependencies": {
     "@react-three/drei": "10.7.4",
     "@react-three/fiber": "9.3.0",
     "@tabler/icons-react": "3.34.1",
     "clsx": "2.1.1",
+    "date-fns": "4.1.0",
     "motion": "12.23.12",
     "next": "15.5.2",
+    "next-contentlayer2": "0.5.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "remark": "15.0.1",
+    "strip-markdown": "6.0.0",
     "tailwind-merge": "3.3.1",
     "three": "0.179.1",
     "three-stdlib": "2.36.0"
