--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "@tabler/icons-react": "3.34.1",
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
+    "lucide-react": "0.545.0",
     "motion": "12.23.12",
     "next": "15.5.2",
     "next-contentlayer2": "0.5.8",
