--- a/app/package.json
+++ b/app/package.json
@@ -11,9 +11,12 @@
     "typesafe-i18n": "typesafe-i18n"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "2.1.16",
+    "@radix-ui/react-slot": "1.2.3",
     "@react-three/drei": "10.7.4",
     "@react-three/fiber": "9.3.0",
     "@tabler/icons-react": "3.34.1",
+    "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
     "lucide-react": "0.545.0",
