--- a/app/package.json
+++ b/app/package.json
@@ -1,48 +1,14 @@
 {
-  "name": "app",
-  "version": "0.1.0",
-  "private": true,
+  "name": "alghoul-portfolio",
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "eslint",
-    "build:content": "contentlayer2 build",
-    "typesafe-i18n": "typesafe-i18n"
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "@radix-ui/react-dropdown-menu": "2.1.16",
-    "@radix-ui/react-slot": "1.2.3",
-    "@react-three/drei": "10.7.4",
-    "@react-three/fiber": "9.3.0",
-    "@tabler/icons-react": "3.34.1",
-    "class-variance-authority": "0.7.1",
-    "clsx": "2.1.1",
-    "date-fns": "4.1.0",
-    "lucide-react": "0.545.0",
-    "motion": "12.23.12",
-    "next": "15.5.2",
-    "next-contentlayer2": "0.5.8",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "remark": "15.0.1",
-    "strip-markdown": "6.0.0",
-    "tailwind-merge": "3.3.1",
-    "three": "0.179.1",
-    "three-stdlib": "2.36.0",
-    "typesafe-i18n": "5.26.2"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@svgr/webpack": "8.1.0",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/three": "0.179.0",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.2",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "astro": "^5.14.4"
   }
 }
