--- a/app/package.json
+++ b/app/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.4.0",
+    "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "^4.1.14",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
     "astro": "^5.14.4",
+    "clsx": "^2.1.1",
+    "motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14"
   }
 }
