--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.4.0",
+    "@react-three/drei": "10.7.6",
+    "@react-three/fiber": "9.3.0",
     "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "^4.1.14",
     "@types/react": "^19.2.2",
@@ -21,6 +23,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.14"
+    "tailwindcss": "^4.1.14",
+    "three-stdlib": "2.36.0"
   }
 }
