--- a/app/package.json
+++ b/app/package.json
@@ -6,9 +6,11 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
+    "check": "astro check",
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "0.9.4",
     "@astrojs/react": "^4.4.0",
     "@react-three/drei": "10.7.6",
     "@react-three/fiber": "9.3.0",
@@ -24,6 +26,7 @@
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
-    "three-stdlib": "2.36.0"
+    "three-stdlib": "2.36.0",
+    "typescript": "5.9.3"
   }
 }
