--- a/app/package.json
+++ b/app/package.json
@@ -21,10 +21,13 @@
     "@types/react-dom": "^19.2.1",
     "astro": "^5.14.4",
     "clsx": "^2.1.1",
+    "date-fns": "4.1.0",
     "lucide-react": "0.545.0",
     "motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "remark": "15.0.1",
+    "strip-markdown": "6.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "4.1.14",
     "three-stdlib": "2.36.0",
