--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,8 @@
     "@astrojs/check": "0.9.4",
     "@astrojs/mdx": "4.3.7",
     "@astrojs/react": "^4.4.0",
+    "@radix-ui/react-dropdown-menu": "2.1.16",
+    "@radix-ui/react-slot": "1.2.3",
     "@react-three/drei": "10.7.6",
     "@react-three/fiber": "9.3.0",
     "@tabler/icons-react": "^3.35.0",
@@ -20,6 +22,7 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
     "astro": "^5.14.4",
+    "class-variance-authority": "0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "4.1.0",
     "lucide-react": "0.545.0",
