--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,66 +1,37 @@
-name: Deploy Next.js site to Pages
+name: Deploy to GitHub Pages
 
 on:
+  # Trigger the workflow every time you push to the `main` branch
+  # Using a different branch name? Replace `main` with your branch’s name
   push:
-    branches: ["master"]
+    branches: [ master ]
+  # Allows you to run this workflow manually from the Actions tab on GitHub.
   workflow_dispatch:
 
+# Allow this job to clone the repo and create a page deployment
 permissions:
   contents: read
   pages: write
   id-token: write
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout your repository using git
         uses: actions/checkout@v4
-
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
+      - name: Install, build, and upload your site
+        uses: withastro/action@v3
         with:
-          version: latest
-
-      - name: Restore cache
-        uses: actions/cache@v4
-        with:
-          path: app/.next/cache
-          key: ${{ runner.os }}-nextjs-bun-${{ hashFiles('app/bun.lockb') }}
-          restore-keys: |
-            ${{ runner.os }}-nextjs-bun-
-
-      - name: Install dependencies
-        run: bun install --ignore-scripts
-        working-directory: ./app
-
-      - name: Generate i18n files
-        run: bun ./node_modules/typesafe-i18n/cli/typesafe-i18n.mjs --no-watch
-        working-directory: ./app
-        
-      - name: Build blog content
-        run: bun run build:content
-        working-directory: ./app
-
-      - name: Build with Next.js
-        run: bun run build
-        working-directory: ./app
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: app/out
+          path: ./app 
+          node-version: 20 
 
   deploy:
+    needs: build
+    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
