--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "@astrojs/react": "^4.4.0",
     "@radix-ui/react-dropdown-menu": "2.1.16",
     "@radix-ui/react-slot": "1.2.3",
+    "@react-spring/three": "10.0.3",
     "@react-three/drei": "10.7.6",
     "@react-three/fiber": "9.3.0",
     "@tabler/icons-react": "^3.35.0",
