--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@react-spring/three": "10.0.3",
     "@react-three/drei": "10.7.6",
     "@react-three/fiber": "9.3.0",
+    "@react-three/postprocessing": "3.0.4",
     "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "4.1.14",
     "@types/react": "^19.2.2",
@@ -36,5 +37,8 @@
     "tailwindcss": "4.1.14",
     "three-stdlib": "2.36.0",
     "typescript": "5.9.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "0.5.19"
   }
 }
