--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,8 @@
     "motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "rehype-autolink-headings": "7.1.0",
+    "rehype-slug": "6.0.0",
     "remark": "15.0.1",
     "strip-markdown": "6.0.0",
     "tailwind-merge": "^3.3.1",
