--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "0.9.4",
     "@astrojs/mdx": "4.3.7",
     "@astrojs/react": "^4.4.0",
+    "@astrojs/sitemap": "3.6.0",
     "@radix-ui/react-dropdown-menu": "2.1.16",
     "@radix-ui/react-slot": "1.2.3",
     "@react-spring/three": "10.0.3",
