--- a/app/package.json
+++ b/app/package.json
@@ -39,6 +39,7 @@
     "rehype-autolink-headings": "7.1.0",
     "rehype-slug": "6.0.0",
     "remark": "15.0.1",
+    "remark-sectionize": "2.1.0",
     "strip-markdown": "6.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "4.1.14",
