--- a/app/package.json
+++ b/app/package.json
@@ -37,9 +37,12 @@
     "react-dom": "^19.2.0",
     "reading-time": "1.5.0",
     "rehype-autolink-headings": "7.1.0",
+    "rehype-components": "0.3.0",
     "rehype-slug": "6.0.0",
     "remark": "15.0.1",
+    "remark-directive": "4.0.0",
     "remark-gfm": "4.0.1",
+    "remark-github-admonitions-to-directives": "2.1.0",
     "remark-sectionize": "2.1.0",
     "strip-markdown": "6.0.0",
     "tailwind-merge": "^3.3.1",
@@ -51,6 +54,7 @@
     "@selemondev/shiki-transformer-copy-button": "0.0.2",
     "@shikijs/colorized-brackets": "3.13.0",
     "@shikijs/transformers": "3.13.0",
-    "@tailwindcss/typography": "0.5.19"
+    "@tailwindcss/typography": "0.5.19",
+    "stylus": "0.64.0"
   }
 }
