--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "@astrojs/react": "^4.4.0",
     "@astrojs/rss": "4.0.12",
     "@astrojs/sitemap": "3.6.0",
+    "@giscus/react": "3.1.0",
     "@radix-ui/react-dropdown-menu": "2.1.16",
     "@radix-ui/react-slot": "1.2.3",
     "@react-spring/three": "10.0.3",
