--- a/app/package.json
+++ b/app/package.json
@@ -44,11 +44,13 @@
     "reading-time": "1.5.0",
     "rehype-autolink-headings": "7.1.0",
     "rehype-components": "0.3.0",
+    "rehype-katex": "7.0.1",
     "rehype-slug": "6.0.0",
     "remark": "15.0.1",
     "remark-directive": "4.0.0",
     "remark-gfm": "4.0.1",
     "remark-github-admonitions-to-directives": "2.1.0",
+    "remark-math": "6.0.0",
     "remark-sectionize": "2.1.0",
     "strip-markdown": "6.0.0",
     "tailwind-merge": "^3.3.1",
